fix: fullscreen map z-index after rebase

--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -77,7 +77,7 @@
 }
 
 .closeButton {
-  z-index: 1;
+  z-index: 250;
   position: absolute;
   top: var(--spacings-xLarge);
   left: var(--spacings-xLarge);
@@ -92,7 +92,7 @@
   position: absolute;
   right: var(--spacings-xLarge);
   bottom: 3rem;
-  z-index: 1;
+  z-index: 250;
 }
 
 .pinSvg__fill {
@@ -127,6 +127,7 @@
     display: block !important;
   }
   .mapWrapper {
+    z-index: 250;
     display: none;
     position: fixed;
     top: 0;
